--- a/Web.config
+++ b/Web.config
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="targetAddress" value="https://ws-login.dev.mypsn.com/Attributes/Service.svc"/>
-    <add key="myURL" value="/Attributes/Service.svc"/>
+    <add key="targetAddress" value="http://google.com"/>
+    <add key="myURL" value="/Proxy/Service.svc"/>
   </appSettings>
 	<system.web>
 		<compilation debug="true"/>
